deployment/jupyter/base/jupyter.ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: jupyter
  labels:
    istio-injection: enabled
