deployment/jupyter/base/jupyter.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter
  namespace: jupyter
  labels:
    app: jupyter
    service: jupyter
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jupyter
  namespace: jupyter
subsets:
  - addresses:
      # NOTE: Because Istio already exposed :80 and :443 to Tailscale VPN. So we can't reuse it for Jupyter. That's why we need to provide custom endpoints to tell Docker to look for private IP within the same network.
      # However a more sophisticated way is to install Kubernetes with VPN feature or using Istio for virtual machine.
      - ip: 192.168.0.186
    ports:
      - port: 8888
